# ProgWspRozprZad4RozwRown

./: CMakeLists.txt  main.cpp
include/: TextTable.h
scripts/: generate_input_data.py
src/: argument_parsing.cpp  main.cpp
